# Deribit-client

./: .env.template  .pre-commit-config.yaml  Dockerfile  README.en.md  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/versions/: 4500f5081cec_create_currencyprice.py
app/: create_fastapi_app.py  main.py
app/api/: __init__.py  frontend.py
app/api/api_v1/: __init__.py
app/api/api_v1/deribits/: __init__.py  deribit_routes.py
app/core/: __init__.py  celery_config.py  config.py  db_helper.py
app/core/dependencies/: __init__.py  deps.py
app/core/models/: __init__.py  currency_price.py
app/repositories/: __init__.py  deribit_repository.py
app/schemas/: deribit_response.py  price.py
app/services/: __init__.py  deribit_client.py  deribit_service.py
app/tasks/: fetch_prices.py
app/templates/: index.html
tests/: conftest.py  test_deribit_repository.py  test_deribit_service.py  test_prices_api.py
