[project]
name = "derebit-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim",email = "maksimgubenin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.ruff_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (типизация)
    "ASYNC", # flake8-async (async/await проверки)
]
ignore = [
    "E501",  # line too long
    "B008",  # неактуально для FastAPI
    "C901",  # слишком сложная функция
    "F401",  # неиспользуемый импорт
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = false

explicit_package_bases = true
namespace_packages = true
mypy_path = "app"

# Для FastAPI и асинхронных библиотек
plugins = [
    "pydantic.mypy",
]

# Игнорируем тестовые файлы и кеши
exclude = [
    "^alembic/",
    "^.*/migrations/.*$",
    "^.*/__pycache__/.*$",
    "^.*/\\.mypy_cache/.*$",
    "^.*/\\.ruff_cache/.*$",
    "tests/",
]

ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
    "-v",
    "--asyncio-mode=auto"  # важно для async тестов
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@overload",
    "@abstractmethod",
    "pass",
]

# Настройки для ruff
[tool.ruff.lint.isort]
known-first-party = ["app"]

# Настройки для pydantic
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true